datafield_template add files for mustache templates

--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,9 @@
 Change log for datafield_action
 ========================================
 
+2025-02-02 (31)
+ - datafield_template add files for mustache templates
+
 2025-02-02 (30)
  - add message to CHANGES.txt
 
