--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -2,6 +2,9 @@
 Change log for datafield_action
 ========================================
 
+2025-03-13 (36)
+ - small correction when assign fields returned as a JSON object from AI-generated content
+
 2025-03-09 (34)
  - implement AI-generation of text feedback from OpenAI
 
